--- a/anuncios.html
+++ b/anuncios.html
@@ -43,8 +43,14 @@
                     <img class="logo" src="img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
+                <div class="mobile-menu">
+                    <a href="#navegación">
+                        <img src="img/barras.svg" alt="Icono Menú">
+                    </a>
+                </div>
+
                 <!-- NAVBAR que es para hacer menús de navegación -->
-                <nav class="navegación">
+                <nav id="navegación" class="navegación">
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
