--- a/blog.html
+++ b/blog.html
@@ -43,8 +43,14 @@
                     <img class="logo" src="img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
+                <div class="mobile-menu">
+                    <a href="#navegación">
+                        <img src="img/barras.svg" alt="Icono Menú">
+                    </a>
+                </div>
+
                 <!-- NAVBAR que es para hacer menús de navegación -->
-                <nav class="navegación">
+                <nav id="navegación" class="navegación">
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
@@ -56,9 +62,9 @@
         </div>
 
     </header>
- 
+
     <main class="contenedor sección contenido-centrado">
-       
+
         <h1 class="fw-300 centrar-texto">Nuestro Blog</h1>
 
         <article class="entrada-blog">
@@ -72,9 +78,7 @@
                 </a>
                 <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
                 <!-- Se usa em | strong | b para dar un FORMATO ya sea de itálico, bold, etc... a cosas dentro de HTML pero por lo general es mejor hacer todo en CSS -->
-                <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y
-                    ahorrando
-                    dinero
+                <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorrando dinero
                 </p>
             </div>
         </article>
@@ -88,11 +92,7 @@
                     <h4>Construye una alberca en tu hogar</h4>
                 </a>
                 <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
-                <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para
-                    darle
-                    vida a
-                    tu
-                    espacio
+                <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio
                 </p>
             </div>
         </article>
@@ -106,11 +106,7 @@
                     <h4>Guía para la decoración de tu hogar</h4>
                 </a>
                 <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
-                <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para
-                    darle
-                    vida a
-                    tu
-                    espacio
+                <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio
                 </p>
             </div>
         </article>
@@ -124,11 +120,7 @@
                     <h4>Guía para la decoración de tu habitación</h4>
                 </a>
                 <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
-                <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para
-                    darle
-                    vida a
-                    tu
-                    espacio
+                <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio
                 </p>
             </div>
         </article>
