--- a/index.html
+++ b/index.html
@@ -43,8 +43,14 @@
                     <img class="logo" src="img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
+                <div class="mobile-menu">
+                    <a href="#navegación">
+                        <img src="img/barras.svg" alt="Icono Menú">
+                    </a>
+                </div>
+
                 <!-- NAVBAR que es para hacer menús de navegación -->
-                <nav class="navegación">
+                <nav id="navegación" class="navegación">
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
@@ -71,28 +77,20 @@
                 <!-- Aquí también creamos una clase, seleccionando <div> y luego presionando CTRL + D para seleccionar todos y procedemos a mover con las flechas y escribir la clase -->
                 <img src="img/icono1.svg" alt="Seguridad">
                 <h3>Seguridad</h3>
-                <p>Dolor sit amet consectetur adipisicing elit. Magnam enim reprehenderit quasi eaque, perferendis
-                    consectetur
-                    harum
-                    quae! Quae omnis natus quo dolorem illo blanditiis non. Illum, modi? Eaque, laboriosam iusto?</p>
+                <p>Dolor sit amet consectetur adipisicing elit. Magnam enim reprehenderit quasi eaque, perferendis consectetur harum quae! Quae omnis natus quo dolorem illo blanditiis non. Illum, modi? Eaque, laboriosam iusto?</p>
             </div>
 
             <div class="icono">
                 <img src="img/icono2.svg" alt="Precio">
                 <h3>El Mejor Precio</h3>
-                <p>Dolor sit amet consectetur adipisicing elit. Ipsa mollitia totam voluptas eum alias, vero ut
-                    molestiae
-                    exercitationem quae deleniti dolor, delectus beatae nisi atque dolorum illo aperiam non consequatur.
+                <p>Dolor sit amet consectetur adipisicing elit. Ipsa mollitia totam voluptas eum alias, vero ut molestiae exercitationem quae deleniti dolor, delectus beatae nisi atque dolorum illo aperiam non consequatur.
                 </p>
             </div>
 
             <div class="icono">
                 <img src="img/icono3.svg" alt="Tiempo">
                 <h3>A Tiempo</h3>
-                <p>Dolor sit amet consectetur adipisicing elit. Iure, nulla obcaecati quam magnam debitis sit et sed
-                    dicta,
-                    facilis
-                    velit fugit fugiat nisi enim cumque. Quam suscipit magni tempora culpa.</p>
+                <p>Dolor sit amet consectetur adipisicing elit. Iure, nulla obcaecati quam magnam debitis sit et sed dicta, facilis velit fugit fugiat nisi enim cumque. Quam suscipit magni tempora culpa.</p>
             </div>
         </div>
 
@@ -212,9 +210,7 @@
                     </a>
                     <p>Escrito el: <span> 20/10/2019 </span> por: <span> Manuel </span> </p>
                     <!-- Se usa em | strong | b para dar un FORMATO ya sea de itálico, bold, etc... a cosas dentro de HTML pero por lo general es mejor hacer todo en CSS -->
-                    <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y
-                        ahorrando
-                        dinero
+                    <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorrando dinero
                     </p>
                 </div>
             </article>
@@ -228,11 +224,7 @@
                         <h4>Guía para la decoración de tu hogar</h4>
                     </a>
                     <p>Escrito el: <span> 20/10/2019 </span> por: <span> Carlos </span> </p>
-                    <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para
-                        darle
-                        vida a
-                        tu
-                        espacio
+                    <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio
                     </p>
                 </div>
             </article>
@@ -244,10 +236,7 @@
             <!-- Esta etiqueta "blockquote" se usa para TESTIMONIALES para agregar las comillas -->
             <div class="testimonial">
                 <blockquote>
-                    El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron
-                    cumple con
-                    todas
-                    mis espectativas.
+                    El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis espectativas.
                 </blockquote>
                 <p>- Leonardo Vasconcelos</p>
             </div>
