--- a/entrada.html
+++ b/entrada.html
@@ -43,8 +43,14 @@
                     <img class="logo" src="img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
+                <div class="mobile-menu">
+                    <a href="#navegación">
+                        <img src="img/barras.svg" alt="Icono Menú">
+                    </a>
+                </div>
+
                 <!-- NAVBAR que es para hacer menús de navegación -->
-                <nav class="navegación">
+                <nav id="navegación" class="navegación">
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
@@ -65,39 +71,22 @@
 
         <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
 
-        <p>Donec vitae efficitur mi, nec rutrum dolor. Vestibulum id libero euismod, tempor lectus nec, condimentum
-            elit. Praesent non dolor et est tincidunt placerat. Aenean posuere enim quis lorem suscipit, non porttitor
-            diam facilisis. Integer eget purus sit amet arcu aliquet efficitur ac sed ex. Praesent porta elit a velit
-            placerat, sagittis aliquet libero malesuada. Maecenas eros neque, dignissim sed tortor ut, scelerisque
-            vehicula tortor. Maecenas sodales pharetra augue, et molestie risus mollis sit amet. Curabitur vel euismod
-            purus, quis placerat quam. Phasellus hendrerit neque ut sem consequat gravida. Etiam quis cursus erat, vitae
-            sodales felis. Praesent et elementum dolor, sed ornare nisi. Etiam faucibus justo at ipsum congue, a
-            suscipit mi varius. Aliquam purus dui, pellentesque ac lacinia vel, egestas sit amet erat. Orci varius
-            natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <p>Donec vitae efficitur mi, nec rutrum dolor. Vestibulum id libero euismod, tempor lectus nec, condimentum elit. Praesent non dolor et est tincidunt placerat. Aenean posuere enim quis lorem suscipit, non porttitor diam facilisis. Integer eget purus
+            sit amet arcu aliquet efficitur ac sed ex. Praesent porta elit a velit placerat, sagittis aliquet libero malesuada. Maecenas eros neque, dignissim sed tortor ut, scelerisque vehicula tortor. Maecenas sodales pharetra augue, et molestie risus
+            mollis sit amet. Curabitur vel euismod purus, quis placerat quam. Phasellus hendrerit neque ut sem consequat gravida. Etiam quis cursus erat, vitae sodales felis. Praesent et elementum dolor, sed ornare nisi. Etiam faucibus justo at ipsum
+            congue, a suscipit mi varius. Aliquam purus dui, pellentesque ac lacinia vel, egestas sit amet erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
-        <p>Nulla risus quam, pharetra quis enim accumsan, vestibulum pulvinar leo. Curabitur quis est nec elit pretium
-            sodales. Donec commodo sagittis ipsum vitae dictum. Nam in nulla sem. Pellentesque placerat leo sit amet
-            libero sagittis facilisis. Integer eu porttitor elit. Maecenas facilisis, mauris eget suscipit molestie,
-            nibh nibh euismod est, vestibulum varius eros ante volutpat massa. In magna purus, ornare sit amet elementum
-            quis, semper at enim. Vivamus tellus neque, semper eget rhoncus eu, porta ut orci. Proin eu viverra dolor.
-            Cras vitae est a est condimentum egestas eu eget est. Etiam at odio commodo, varius nisl et, gravida arcu.
-            Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <p>Nulla risus quam, pharetra quis enim accumsan, vestibulum pulvinar leo. Curabitur quis est nec elit pretium sodales. Donec commodo sagittis ipsum vitae dictum. Nam in nulla sem. Pellentesque placerat leo sit amet libero sagittis facilisis. Integer
+            eu porttitor elit. Maecenas facilisis, mauris eget suscipit molestie, nibh nibh euismod est, vestibulum varius eros ante volutpat massa. In magna purus, ornare sit amet elementum quis, semper at enim. Vivamus tellus neque, semper eget rhoncus
+            eu, porta ut orci. Proin eu viverra dolor. Cras vitae est a est condimentum egestas eu eget est. Etiam at odio commodo, varius nisl et, gravida arcu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
-        <p>Donec vitae efficitur mi, nec rutrum dolor. Vestibulum id libero euismod, tempor lectus nec, condimentum
-            elit. Praesent non dolor et est tincidunt placerat. Aenean posuere enim quis lorem suscipit, non porttitor
-            diam facilisis. Integer eget purus sit amet arcu aliquet efficitur ac sed ex. Praesent porta elit a velit
-            placerat, sagittis aliquet libero malesuada. Maecenas eros neque, dignissim sed tortor ut, scelerisque
-            vehicula tortor. Maecenas sodales pharetra augue, et molestie risus mollis sit amet. Curabitur vel euismod
-            purus, quis placerat quam. Phasellus hendrerit neque ut sem consequat gravida. Etiam quis cursus erat, vitae
-            sodales felis. Praesent et elementum dolor, sed ornare nisi. Etiam faucibus justo at ipsum congue, a
-            suscipit mi varius. Aliquam purus dui, pellentesque ac lacinia vel, egestas sit amet erat. Orci varius
-            natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <p>Donec vitae efficitur mi, nec rutrum dolor. Vestibulum id libero euismod, tempor lectus nec, condimentum elit. Praesent non dolor et est tincidunt placerat. Aenean posuere enim quis lorem suscipit, non porttitor diam facilisis. Integer eget purus
+            sit amet arcu aliquet efficitur ac sed ex. Praesent porta elit a velit placerat, sagittis aliquet libero malesuada. Maecenas eros neque, dignissim sed tortor ut, scelerisque vehicula tortor. Maecenas sodales pharetra augue, et molestie risus
+            mollis sit amet. Curabitur vel euismod purus, quis placerat quam. Phasellus hendrerit neque ut sem consequat gravida. Etiam quis cursus erat, vitae sodales felis. Praesent et elementum dolor, sed ornare nisi. Etiam faucibus justo at ipsum
+            congue, a suscipit mi varius. Aliquam purus dui, pellentesque ac lacinia vel, egestas sit amet erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
-        <p>Donec vitae efficitur mi, nec rutrum dolor. Vestibulum id libero euismod, tempor lectus nec, condimentum
-            elit. Praesent non dolor et est tincidunt placerat. Aenean posuere enim quis lorem suscipit, non porttitor
-            diam facilisis. Integer eget purus sit amet arcu aliquet efficitur ac sed ex. Praesent porta elit a velit
-            placerat, sagittis aliquet libero malesuada. Maecenas eros neque, dignissim sed tortor ut, scelerisque
-            vehicula tortor. </p>
+        <p>Donec vitae efficitur mi, nec rutrum dolor. Vestibulum id libero euismod, tempor lectus nec, condimentum elit. Praesent non dolor et est tincidunt placerat. Aenean posuere enim quis lorem suscipit, non porttitor diam facilisis. Integer eget purus
+            sit amet arcu aliquet efficitur ac sed ex. Praesent porta elit a velit placerat, sagittis aliquet libero malesuada. Maecenas eros neque, dignissim sed tortor ut, scelerisque vehicula tortor. </p>
 
     </main>
 
