--- a/nosotros.html
+++ b/nosotros.html
@@ -43,8 +43,14 @@
                     <img class="logo" src="img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
+                <div class="mobile-menu">
+                    <a href="#navegación">
+                        <img src="img/barras.svg" alt="Icono Menú">
+                    </a>
+                </div>
+
                 <!-- NAVBAR que es para hacer menús de navegación -->
-                <nav class="navegación">
+                <nav id="navegación" class="navegación">
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
@@ -72,16 +78,10 @@
 
                 <blockquote>25 Años de Experiencia</blockquote>
 
-                <p>Donec vitae efficitur mi, nec rutrum dolor. Vestibulum id libero euismod, tempor lectus nec,
-                    condimentum elit. Praesent non dolor et est tincidunt placerat. Aenean posuere enim quis lorem
-                    suscipit, non porttitor diam facilisis. Integer eget purus sit amet arcu aliquet efficitur ac sed
-                    ex. Praesent porta elit a velit placerat, sagittis aliquet libero malesuada. Maecenas eros neque,
-                    dignissim sed tortor ut, scelerisque vehicula tortor. Maecenas sodales pharetra augue, et molestie
-                    risus mollis sit amet. Curabitur vel euismod purus, quis placerat quam. Phasellus hendrerit neque ut
-                    sem consequat gravida. <br><br> Etiam quis cursus erat, vitae sodales felis. Praesent et elementum dolor, sed
-                    ornare nisi. Etiam faucibus justo at ipsum congue, a suscipit mi varius. Aliquam purus dui,
-                    pellentesque ac lacinia vel, egestas sit amet erat. Orci varius natoque penatibus et magnis dis
-                    parturient montes, nascetur ridiculus mus.</p>
+                <p>Donec vitae efficitur mi, nec rutrum dolor. Vestibulum id libero euismod, tempor lectus nec, condimentum elit. Praesent non dolor et est tincidunt placerat. Aenean posuere enim quis lorem suscipit, non porttitor diam facilisis. Integer
+                    eget purus sit amet arcu aliquet efficitur ac sed ex. Praesent porta elit a velit placerat, sagittis aliquet libero malesuada. Maecenas eros neque, dignissim sed tortor ut, scelerisque vehicula tortor. Maecenas sodales pharetra augue,
+                    et molestie risus mollis sit amet. Curabitur vel euismod purus, quis placerat quam. Phasellus hendrerit neque ut sem consequat gravida. <br><br> Etiam quis cursus erat, vitae sodales felis. Praesent et elementum dolor, sed ornare nisi.
+                    Etiam faucibus justo at ipsum congue, a suscipit mi varius. Aliquam purus dui, pellentesque ac lacinia vel, egestas sit amet erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
             </div>
 
@@ -100,28 +100,20 @@
                 <!-- Aquí también creamos una clase, seleccionando <div> y luego presionando CTRL + D para seleccionar todos y procedemos a mover con las flechas y escribir la clase -->
                 <img src="img/icono1.svg" alt="Seguridad">
                 <h3>Seguridad</h3>
-                <p>Dolor sit amet consectetur adipisicing elit. Magnam enim reprehenderit quasi eaque, perferendis
-                    consectetur
-                    harum
-                    quae! Quae omnis natus quo dolorem illo blanditiis non. Illum, modi? Eaque, laboriosam iusto?</p>
+                <p>Dolor sit amet consectetur adipisicing elit. Magnam enim reprehenderit quasi eaque, perferendis consectetur harum quae! Quae omnis natus quo dolorem illo blanditiis non. Illum, modi? Eaque, laboriosam iusto?</p>
             </div>
 
             <div class="icono">
                 <img src="img/icono2.svg" alt="Precio">
                 <h3>El Mejor Precio</h3>
-                <p>Dolor sit amet consectetur adipisicing elit. Ipsa mollitia totam voluptas eum alias, vero ut
-                    molestiae
-                    exercitationem quae deleniti dolor, delectus beatae nisi atque dolorum illo aperiam non consequatur.
+                <p>Dolor sit amet consectetur adipisicing elit. Ipsa mollitia totam voluptas eum alias, vero ut molestiae exercitationem quae deleniti dolor, delectus beatae nisi atque dolorum illo aperiam non consequatur.
                 </p>
             </div>
 
             <div class="icono">
                 <img src="img/icono3.svg" alt="Tiempo">
                 <h3>A Tiempo</h3>
-                <p>Dolor sit amet consectetur adipisicing elit. Iure, nulla obcaecati quam magnam debitis sit et sed
-                    dicta,
-                    facilis
-                    velit fugit fugiat nisi enim cumque. Quam suscipit magni tempora culpa.</p>
+                <p>Dolor sit amet consectetur adipisicing elit. Iure, nulla obcaecati quam magnam debitis sit et sed dicta, facilis velit fugit fugiat nisi enim cumque. Quam suscipit magni tempora culpa.</p>
             </div>
         </div>
 
